@@ -1,6 +1,7 @@
 
 3.98  2013-05-03
   - Added is_empty method to Mojo::Transaction::HTTP.
+  - Added close_gracefully method to Mojo::IOLoop::Stream.
   - Removed deprecated after_static_dispatch hook.
   - Improved Mojo::DOM::HTML performance.
   - Improved html_unescape performance in Mojo::Util.
